--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .link {
     text-decoration: none;
     display: inline;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     font-weight: 700;
     font-size: large;
     cursor: pointer;
