--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,10 +1,12 @@
 .footer {
-    height: 100px;
+    height: 100%;
     background-color: #1d3557;
 }
 
 .textFooter {
     padding-top: 1em;
+    margin: 0;
+    color: black;
 }
 
 .linkFooter {
@@ -14,5 +16,5 @@
     font-weight: 700;
     font-size: smaller;
     cursor: pointer;
-    color: black;
+    color: white;
 }
