--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -12,4 +12,15 @@
     background-color: #1d3557;
     position: sticky;
     top: 0;
+    z-index: 1;
   }
+
+  @media only screen and (max-width: 375px) {
+    .navbarsticky {
+      height: 70px;
+      background-color: #1d3557;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+}
