--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -16,11 +16,7 @@
   }
 
   @media only screen and (max-width: 375px) {
-    .navbarsticky {
-      height: 70px;
-      background-color: #1d3557;
-      position: sticky;
-      top: 0;
-      z-index: 1;
+    li.link{
+      font-size: medium;
     }
 }
