--- a/client/src/components/ContactSection.css
+++ b/client/src/components/ContactSection.css
@@ -127,8 +127,9 @@
   .contact-info-item {
     display: flex;
     align-items: center;
-    gap: 2em;
-    width: 100%;
+    gap: 1em;
+    width: 75%;
+    max-width: 350px;
     border-radius: 10px;
     border: 1px solid black;
     margin-bottom: 1em;
@@ -153,16 +154,29 @@
   .form-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     margin-left: unset;
+    margin-bottom: auto;
   }
 
   .info-item-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-right: unset;
   }
 
+  .form-group {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .error-message {
+    margin-bottom: 0.1rem;
+  }
 
 }
