--- a/client/src/components/MeSection.css
+++ b/client/src/components/MeSection.css
@@ -1,5 +1,5 @@
 .mesection {
-    height: 850px;
+    height: 100%;
     background-color: #f1faee;
     
 }
@@ -7,6 +7,7 @@
 .ul-group {
     list-style-type: none;
     place-self: 'center';
+    padding: 0;
 }
 
 .card-div{
