--- a/client/src/components/ProjectsSection.css
+++ b/client/src/components/ProjectsSection.css
@@ -1,5 +1,5 @@
 .projects-section {
-    min-height: 950px;
+    min-height: 1050px;
     max-height: 100%;
     background-color: #a8dadc;
     padding-top: 0.3em;
@@ -21,11 +21,12 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
+    align-content: flex-start;
     align-items: flex-start;
     gap: 2em;
     overflow: hidden;
     height: 100%;
+    min-height: 990px;
     width: 100%;
 }
 
@@ -34,6 +35,7 @@
     padding: 3rem 5rem;
     max-width: 100%;
     max-height: 100%;
+    min-height: 300px;
     margin-top: 1.5em;
     flex-basis: 30%;
     margin-bottom: 3em;
@@ -82,5 +84,6 @@
 
     .card-project {
         max-width: 95%;
+        min-height: 150px;
     }
 }
