--- a/client/src/components/ProjectsSection.css
+++ b/client/src/components/ProjectsSection.css
@@ -5,7 +5,6 @@
     padding-top: 0.3em;
     display: flex;
     flex-direction: column;
-    /* justify-content: center;  */
     align-content: center;
     align-items: center;
 }
@@ -39,6 +38,7 @@
     margin-top: 1.5em;
     flex-basis: 30%;
     margin-bottom: 3em;
+    cursor: pointer;
 }
 
 .card-expand {
@@ -48,13 +48,9 @@
 }
 
 
-/* .card-div {
-    cursor: pointer;
-}
 
 
-
-.card-div:hover .logo-image {
+/* .card-div:hover .logo-image {
     animation-name: fade-img;
     animation-duration: 1s;
     animation-fill-mode: forwards;
