--- a/client/src/components/ProjectsSection.css
+++ b/client/src/components/ProjectsSection.css
@@ -1,8 +1,7 @@
 .projects-section {
-    min-height: 1150px;
     max-height: 100%;
     background-color: #a8dadc;
-    padding-top: 0.3em;
+    /* padding-top: 0.3em; */
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -27,6 +26,7 @@
     height: 100%;
     min-height: 1275px;
     width: 100%;
+    margin-bottom: 4em;
 }
 
 .card-project{
@@ -48,7 +48,12 @@
 }
 
 .links-div {
+    display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1em; 
+    margin-top: 1em;
 }
 
 
@@ -77,6 +82,7 @@ a:where(:hover, :focus-visible) {
     text-decoration: none;
     color: #e63946;
 }
+
 
 a:hover {
     color:   #457b9d !important;
@@ -109,4 +115,18 @@ a:visited {
         width: 95%;
         min-height: 150px;
     }
+
+    .links-div {
+        flex-direction: column;
+    }
+
+    .underline_link {
+        margin-left: 0em;
+        margin-top: 0.5em;
+    }
+
+    .links-div {
+        gap: 0em;
+    }
+
 }
