--- a/client/src/components/Welcome.css
+++ b/client/src/components/Welcome.css
@@ -1,4 +1,82 @@
 .container-welcome {
   height: 100vh;
   background-color: var(--main-black);
+
+  /* alignment */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-inner {
+  padding: 4rem 3rem 4rem 3rem;
+
+  /* alignment */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.container-inner::before,
+.container-inner::after {
+  position: absolute;
+  width: 66px;
+  height: 30px;
+  content: '';
+}
+
+.container-inner::before {
+  left: 0;
+  top: 0;
+  border-left: 6px solid var(--white);
+  border-top: 6px solid var(--white);
+  border-radius: 4px;
+  animation: 30s infinite glow;
+}
+
+.container-inner::after {
+  right: 0;
+  bottom: 0;
+  border-right: 6px solid var(--white);
+  border-bottom: 6px solid var(--white);
+  border-radius: 4px;
+  animation: 30s infinite glow;
+}
+
+.container-content {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  justify-content: space-between;
+  width: var(--width);
+}
+
+@keyframes glow {
+  0% {
+    border-color: var(--red);
+  }
+  25% {
+    border-color: var(--blue);
+  }
+  75% {
+    border-color: var(--purple);
+  }
+  100% {
+    border-color: var(--red);
+  }
+}
+@-webkit-keyframes glow {
+  0% {
+    border-color: var(--red);
+  }
+  25% {
+    border-color: var(--blue);
+  }
+  75% {
+    border-color: var(--purple);
+  }
+  100% {
+    border-color: var(--red);
+  }
 }
