--- a/client/src/components/ProjectSelection.css
+++ b/client/src/components/ProjectSelection.css
@@ -18,3 +18,44 @@ h2 {
   margin: 2rem 0 0 0;
   width: 30vw;
 }
+
+@media only screen and (max-width: 1700px) {
+  .projects-selection-container {
+    grid-auto-rows: minmax(auto, 60px);
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .projects-container {
+    width: unset;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-self: flex-start;
+  }
+
+  .projects-selection-container {
+    grid-template-columns: repeat(3, 200px);
+    width: unset;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .projects-selection-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .projects-selection-container {
+    grid-auto-rows: minmax(auto, 80px);
+  }
+}
+
+@media only screen and (max-width: 475px) {
+  .projects-selection-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: minmax(auto, 50px);
+  }
+}
